<resources>
    <string name="app_name" translatable="false">نیکان ویزیتور</string>

    <!--Fonts-->
    <string name="font_regular">fonts/en/regular.ttf</string>
    <string name="font_light">fonts/en/light.ttf</string>
    <string name="font_bold">fonts/en/bold.ttf</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="customers">Customers</string>
    <string name="add_customer">Add customer</string>
    <string name="nothing_found">Nothing Found</string>
    <string name="full_name">Full name</string>
    <string name="mobile">Mobile</string>
    <string name="edit_customer">Edit customer</string>
    <string name="save">Save</string>
    <string name="enter_full_name">Please enter full name</string>
    <string name="enter_mobile">Please enter mobile</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="choose">Choose</string>
    <string name="update">Update</string>
    <string name="date">Date</string>
    <string name="sure_delete">Are you sure to delete %s?</string>
    <string name="yes">Yes</string>
    <string name="product_name">Product name</string>
    <string name="product_code">Product code</string>
    <string name="add_product">Add product</string>
    <string name="edit_product">Edit product</string>
    <string name="add_order">Add order</string>
    <string name="edit_order">Edit order</string>
    <string name="order_items_count">%s product(s)</string>
    <string name="orderer_name">Customer: %s</string>
    <string name="factor">Factor: %s</string>
    <string name="select_customer">Select customer</string>
    <string name="seed">Seed data</string>
    <string name="seed_description">Do you want to seed data into database?</string>
    <string name="seeding">Seeding data …</string>
    <string name="save_continue">Save and Continue</string>
    <string name="select_products">Product selection</string>
    <string name="select_customer_error">Please select a customer to continue</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="enter_quantity">Enter quantity</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_error">Quantity must be greater than equal to zero</string>
    <string name="cancel">Cancel</string>
    <string name="cart_delete_description">Are you sure to remove this item from shop cart?</string>
    <string name="checkout">Checkout</string>
    <string name="select_products_error">Please add product(s) to shop cart</string>
    <string name="save_order">Save order</string>
    <string name="ok">OK</string>
    <string name="sure_delete_order">Are you sure to delete order #%s?</string>
    <string name="show_order">Show order</string>
    <string name="product_quantity">Quantity: %s</string>
    <string name="customer_info">Customer information</string>
    <string name="order_info">Order information</string>
    <string name="current_customer">Current customer</string>
    <string name="order_edit_customer">Edit customer (order #%s)</string>
    <string name="order_edit_products">Edit products (order #%s)</string>
    <string name="order_edit_checkout">Checkout (order #%s)</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="init_user_error">Initialize user error, try again</string>
    <string name="sth_wrong">Something went wrong, try again</string>
    <string name="enter_username">Please enter username</string>
    <string name="enter_password">Please enter password</string>
</resources>