<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_rounded"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_10sdp"
            android:text="@string/choose"
            android:textAlignment="viewStart"
            android:textColor="@color/text_muted"
            android:textSize="@dimen/_16ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/edit"
            android:textAlignment="viewStart"
            android:textColor="@color/md_theme_onBackground"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_edit"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_8sdp"
            app:iconSize="@dimen/_14sdp"
            app:iconTint="@color/md_theme_onBackground"
            app:rippleColor="@color/md_theme_surfaceVariant" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/md_theme_surfaceVariant" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/delete"
            android:textAlignment="viewStart"
            android:textColor="@color/md_theme_error"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="0dp"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/_8sdp"
            app:iconSize="@dimen/_14sdp"
            app:iconTint="@color/md_theme_error"
            app:rippleColor="@color/md_theme_surfaceVariant" />
    </LinearLayout>
</layout>