<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_rounded"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_16sdp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:padding="@dimen/_10sdp"
            android:text="@string/delete"
            android:textAlignment="viewStart"
            android:textColor="@color/text_muted"
            android:textSize="@dimen/_16ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/md_theme_surfaceVariant" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/cart_delete_description"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_close"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/cancel"
                android:textColor="@color/md_theme_tertiary"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:icon="@drawable/ic_cancel"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_8sdp"
                app:iconSize="@dimen/_14sdp"
                app:iconTint="@color/md_theme_tertiary"
                app:strokeColor="@color/md_theme_tertiary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/delete"
                android:textColor="@color/md_theme_error"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_8sdp"
                app:icon="@drawable/ic_delete"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/_8sdp"
                app:iconSize="@dimen/_14sdp"
                app:iconTint="@color/md_theme_error"
                app:strokeColor="@color/md_theme_error" />

        </LinearLayout>
    </LinearLayout>
</layout>