<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="orderSummery"
            type="ir.aliranjbarzadeh.nikantask.data.models.OrderSummery" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.orders.edit.customer.OrderEditCustomerFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/current_customer"
                android:textSize="@dimen/_16ssp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/md_theme_onPrimary"
                app:cardCornerRadius="0dp"
                app:cardElevation="@dimen/_1sdp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_8sdp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_4sdp"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:maxLines="1"
                        android:text="@{orderSummery.customer.name, default=@string/full_name}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:textSize="@dimen/_12ssp"
                        app:drawableStartCompat="@drawable/ic_person"
                        app:drawableTint="@color/md_theme_onPrimaryContainer" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_call"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_25sdp"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:padding="0dp"
                        android:text="@{orderSummery.customer.mobile, default=@string/mobile}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/text_muted"
                        android:textSize="@dimen/_10ssp"
                        app:cornerRadius="@dimen/_8sdp"
                        app:icon="@drawable/ic_call"
                        app:iconGravity="textStart"
                        app:iconPadding="@dimen/_4sdp"
                        app:iconSize="@dimen/_10sdp"
                        app:iconTint="@color/text_muted" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:text="@string/customers"
                android:textSize="@dimen/_16ssp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_customers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:contentDescription="@string/edit_customer"
                android:paddingStart="@dimen/_4sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingEnd="@dimen/_4sdp"
                android:paddingBottom="@dimen/_60sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/customer_template" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/save_continue"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="@dimen/_8sdp"
            app:icon="@drawable/ic_next"
            app:iconGravity="textStart"
            app:iconSize="@dimen/_16sdp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>